# react-native-linear-gradient

skia/: BUILD.gn  RSkComponentBVLinearGradient.cpp  RSkComponentBVLinearGradient.h  RSkComponentProviderBVLinearGradient.cpp  RSkComponentProviderBVLinearGradient.h  Rsk.project
skia/react/renderer/components/rnx-gradient/: ComponentDescriptors.h  EventEmitters.cpp  Props.cpp  Props.h  RCTComponentViewHelpers.h  ShadowNodes.cpp  ShadowNodes.h
